removed second instance of getFirst